added reference to me

--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html>
 <body>
+  <!-- Reference for representative h-card properties: https://microformats.org/wiki/h-card -->
+  <main class="h-card" rel="author">
+      <img class="u-photo" alt="My profile photo" src="tomhaus.jpeg" />
+    <h1>
+      I'm <span class="p-name">Tom Haus</span>.
+    </h1>
+
+    <p class="p-note">
+      ...and I am a human on the Internet.
+    </p>
+
+    <ul>
+      <!-- my domain -->
+      <li>Blog: <a class="u-url" href="https://www.tomhaus.me" rel="me">www.tomhaus.me</a></li>
+      <li>Microblog: <a class="u-uid u-url" href="https://blog.tomhaus.me" rel="me">blog.tomhaus.me</a><a href="https://tomhaus.micro.blog" rel="me"> </a></li>
+      <li>Scribbles: <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a></li>
+      <li>Drafts: <a class="u-url" href="https://drafts.tomhaus.me" rel="me">Drafts</a></li>            
+      <li>About me: <a class="u-uid u-url" href="https://tomhaus.me" rel="me">tomhaus.me</a></li>
+      <li>Mastodon: <a class="u-uid u-url" href="https://techhub.social/@tomhaus" rel="me">techhub</a></li>
+      <li>Github: <a class="u-uid u-url" href="https://github.com/thomashaus" rel="me">@thomashaus</a></li>
+    </ul>
+  </main>
+
+<script src="https://tinylytics.app/embed/ys_REMxcqP7GNUxQzLiG.js" defer></script>
+    
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
