--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li>Scribbles: <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a></li>
       <li>Drafts: <a class="u-url" href="https://drafts.tomhaus.me" rel="me">Drafts</a></li>            
       <li>About me: <a class="u-uid u-url" href="https://tomhaus.me" rel="me">tomhaus.me</a></li>
-      <li>Mastodon: <a class="u-uid u-url" href="https://techhub.social/@tomhaus" rel="me">techhub</a></li>
+      <li>Mastodon: <a class="u-uid u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a></li>
       <li>Github: <a class="u-uid u-url" href="https://github.com/thomashaus" rel="me">@thomashaus</a></li>
     </ul>
   </main>
