--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <ul>
       <!-- my domain -->
       <li>Blog: <a class="u-url" href="https://www.tomhaus.me" rel="me">www.tomhaus.me</a></li>
-      <li>Microblog: <a class="u-uid u-url" href="https://blog.tomhaus.me" rel="me">blog.tomhaus.me</a><a href="https://tomhaus.micro.blog" rel="me"> </a></li>
-      <li>Scribbles: <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a></li>
-      <li>Drafts: <a class="u-url" href="https://drafts.tomhaus.me" rel="me">Drafts</a></li>            
+      <li>Microblog: <a class="u-uid u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a><a href="https://tomhaus.micro.blog" rel="me"> </a></li>
+      <li>Scribbles: <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a></li>            
       <li>About me: <a class="u-uid u-url" href="https://tomhaus.me" rel="me">tomhaus.me</a></li>
       <li>Mastodon: <a class="u-uid u-url" href="https://mastodon.social/@tomhaus" rel="me">Mastodon</a></li>
       <li>Github: <a class="u-uid u-url" href="https://github.com/thomashaus" rel="me">@thomashaus</a></li>
