--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
   <!-- Reference for representative h-card properties: https://microformats.org/wiki/h-card -->
   <main class="h-card" rel="author">
-      <img class="u-photo" alt="My profile photo" src="webResult.jpg" />
+      <img class="u-photo" alt="My profile photo" src="webResult.jpg" width="150" height="150"/>
     <h1>
       I'm <span class="p-name">Tom Haus</span>.
     </h1>
