--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <ul>
       <!-- my domain -->
       <li>Me: <a class="u-url" href="https://www.tomhaus.net" rel="me">tomhaus.net</a></li>
+      <li>io: <a class="u-url" href="https://www.tomhaus.io" rel="me">tomhaus.io</a></li>
       <li>Blog: <a class="u-url" href="https://www.tomhaus.me" rel="me">www.tomhaus.me</a></li>
       <li>Microblog: <a class="u-uid u-url" href="https://www.tomhaus.com" rel="me">www.tomhaus.com</a><a href="https://tomhaus.micro.blog" rel="me"> </a></li>
       <li>Scribbles: <a class="u-url" href="https://blips.tomhaus.me" rel="me">Scribbles</a></li>            
