--- a/test.html
+++ b/test.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tom Haus | Technology Strategist & Leader</title>
-  <meta name="description" content="Official personal website for Tom Haus, technology strategist and leader.">
+  <title>Tom Haus | Middle Market CTO, Transamerica</title>
+  <meta name="description" content="Official personal website for Tom Haus, Middle Market CTO at Transamerica.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicon (Optional) -->
@@ -141,6 +141,32 @@
       margin-bottom: 0;
     }
 
+    /* HOBBIES SECTION */
+    .hobbies-grid {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      max-width: 1000px;
+      margin: 40px auto 0;
+      justify-content: center;
+    }
+    .hobby {
+      flex: 1 1 300px;
+      background: #111;
+      padding: 20px;
+      border-radius: 6px;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+      text-align: center;
+    }
+    .hobby h3 {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+    .hobby p {
+      font-size: 1rem;
+      margin-bottom: 0;
+    }
+
     /* CONTACT SECTION */
     .contact-content {
       display: flex;
@@ -179,7 +205,8 @@
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
-          <li><a href="#strategy">Technology Strategy</a></li>
+          <li><a href="#strategy">Tech Strategy</a></li>
+          <li><a href="#hobbies">Hobbies</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn</a></li>
         </ul>
@@ -191,8 +218,8 @@
   <section class="hero" id="home">
     <h1>Hello, I’m Tom Haus</h1>
     <p>
-      Innovator • Consultant • Leader<br>
-      Building scalable solutions at the intersection of business strategy and cutting-edge technology.
+      Middle Market CTO at Transamerica<br>
+      Spearheading technology assessments and always-on solutions—because innovation should never sleep.
     </p>
     <a href="#about" class="cta-button">Learn More</a>
   </section>
@@ -201,16 +228,15 @@
   <section class="section" id="about">
     <h2>About Me</h2>
     <p>
-      With a career dedicated to designing technology strategies for businesses in rapidly shifting
-      markets, I’m driven by a vision: bridging the gap between innovation and real-world value.
-      My core style weaves **clarity**, **professionalism**, **positivity**, and **empathy** into
-      every interaction—reflecting my belief in candid communication and supportive leadership.
+      As the Middle Market CTO at Transamerica, I’m here to architect reliable, scalable platforms 
+      that bridge technology and business objectives. My work focuses on structured assessments 
+      to spot efficiency gaps, harness fresh opportunities, and maintain readiness for tomorrow’s world.
     </p>
     <p>
-      I’ve led transformative initiatives across IT consultancy, data analytics, and enterprise-scale
-      operations. Whether re-engineering critical workflows or overseeing large-scale system transitions,
-      I focus on creating positive, lasting impact. Collaboration isn’t just a buzzword; it’s the 
-      cornerstone of my success in driving projects from concept to completion.
+      Whether it’s streamlining core infrastructure, championing automation, or enhancing the 
+      digital experience, I’m passionate about concrete results and a proactive approach 
+      to transforming enterprise operations. At the heart of my leadership style is 
+      transparency, teamwork, and a passion for creative problem-solving.
     </p>
   </section>
 
@@ -218,40 +244,91 @@
   <section class="section" id="strategy">
     <h2>My Technology Strategy</h2>
     <p>
-      The backbone of success lies in harnessing innovative technology to streamline processes, 
-      empower teams, and deliver tangible outcomes. Below are six foundational pillars I’ve honed 
-      over years of advisory and leadership.
+      Driving growth in the middle market space at Transamerica takes more than a vision—it takes a 
+      proven framework. Below are six pivotal pillars in my work, helping reduce complexity, improve 
+      speed to market, and ensure 24/7 service reliability.
     </p>
     <div class="tech-strategy">
       <div class="pillar">
         <h3>1. Standardization</h3>
-        <p>Consolidate and simplify processes to achieve uniform, scalable solutions that reduce costs 
-          and technical debt while maximizing speed to market.</p>
+        <p>
+          I champion consistent architectures and streamlined processes to cut through 
+          complexity and lay a solid foundation for hypergrowth.
+        </p>
       </div>
       <div class="pillar">
         <h3>2. Digitization</h3>
-        <p>Replace manual tasks with seamless digital experiences—enhancing efficiency, accuracy, 
-          and customer satisfaction.</p>
+        <p>
+          Expanding digital channels not only boosts our reach and scalability, it ensures 
+          customers and teams stay connected whenever, wherever.
+        </p>
       </div>
       <div class="pillar">
         <h3>3. Automation</h3>
-        <p>Automate repetitive workflows and self-service interfaces to cut down on errors, reduce 
-          overhead, and deliver real-time results for stakeholders.</p>
+        <p>
+          Automated workflows mean fewer bottlenecks and less room for error, 
+          allowing us to innovate faster and work smarter.
+        </p>
       </div>
       <div class="pillar">
         <h3>4. Operating Model</h3>
-        <p>Adopt a balanced workforce strategy of core experts and strategic partners, ensuring 
-          agility, scalability, and consistent governance.</p>
+        <p>
+          A balanced blend of in-house talent and strategic partnerships keeps us nimble, 
+          cost-efficient, and always ready for the next challenge.
+        </p>
       </div>
       <div class="pillar">
         <h3>5. Security & Availability</h3>
-        <p>Design and implement systems that are resilient and always-on, meeting the demands of 
-          global, round-the-clock operations and protecting vital data.</p>
+        <p>
+          Resiliency is engineered into every solution. Our platforms are always on— 
+          so your business never has to hit pause.
+        </p>
       </div>
       <div class="pillar">
         <h3>6. Data & Analytics</h3>
-        <p>Leverage real-time insights to shape smarter decisions, boost operational efficiency, and 
-          open new revenue pathways.</p>
+        <p>
+          From real-time dashboards to AI-driven insights, data underpins strategic decisions, 
+          unlocking value nobody else sees.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- HOBBIES SECTION -->
+  <section class="section" id="hobbies">
+    <h2>Life Beyond Tech</h2>
+    <p>
+      Technology is my profession—nature and adventure keep me energized.
+      Here’s a glimpse of what keeps me inspired outside the office.
+    </p>
+    <div class="hobbies-grid">
+      <div class="hobby">
+        <h3>Photography</h3>
+        <p>
+          Capturing fleeting moments, whether it’s an epic sunset or a candid family snapshot, 
+          reminds me to look closer and appreciate the world’s small details.
+        </p>
+      </div>
+      <div class="hobby">
+        <h3>Nature & Hiking</h3>
+        <p>
+          I love wandering trails, exploring national parks, and hitting refresh 
+          when I’m off the grid—just me, fresh air, and the open horizon.
+        </p>
+      </div>
+      <div class="hobby">
+        <h3>Family Time</h3>
+        <p>
+          My family is my anchor—whether we’re laughing over board games, 
+          cooking up a feast, or simply enjoying each other’s company.
+        </p>
+      </div>
+      <div class="hobby">
+        <h3>MN Wild Hockey</h3>
+        <p>
+          As a proud fan of the Minnesota Wild, I’m always game for catching a match, 
+          celebrating every slap shot, and bonding with fellow hockey enthusiasts.
+        </p>
       </div>
     </div>
   </section>
@@ -260,7 +337,7 @@
   <section class="section" id="contact">
     <h2>Contact</h2>
     <div class="contact-content">
-      <p>Have a project, question, or speaking opportunity? I’d love to connect!</p>
+      <p>Got a question, idea, or just want to talk hockey? I’m all ears!</p>
       <a href="mailto:tom@example.com">tom@example.com</a>
       <a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn Profile</a>
     </div>
