--- a/test.html
+++ b/test.html
@@ -141,7 +141,7 @@
       margin-bottom: 0;
     }
 
-    /* HOBBIES SECTION */
+    /* HOBBIES / PASSIONS SECTION */
     .hobbies-grid {
       display: flex;
       flex-wrap: wrap;
@@ -206,7 +206,7 @@
         <ul>
           <li><a href="#about">About</a></li>
           <li><a href="#strategy">Tech Strategy</a></li>
-          <li><a href="#hobbies">Hobbies</a></li>
+          <li><a href="#passions">Beyond Work</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn</a></li>
         </ul>
@@ -218,8 +218,9 @@
   <section class="hero" id="home">
     <h1>Hello, I’m Tom Haus</h1>
     <p>
-      Middle Market CTO at Transamerica<br>
-      Spearheading technology assessments and always-on solutions—because innovation should never sleep.
+      Middle Market CTO at Transamerica <br>
+      Bringing financial security to the middle market through innovation, 
+      automation, and a passion for helping others thrive.
     </p>
     <a href="#about" class="cta-button">Learn More</a>
   </section>
@@ -228,15 +229,15 @@
   <section class="section" id="about">
     <h2>About Me</h2>
     <p>
-      As the Middle Market CTO at Transamerica, I’m here to architect reliable, scalable platforms 
-      that bridge technology and business objectives. My work focuses on structured assessments 
-      to spot efficiency gaps, harness fresh opportunities, and maintain readiness for tomorrow’s world.
+      As the Middle Market CTO at Transamerica, I lead technology assessments and strategic implementations 
+      that guide people toward greater financial security. I believe in enjoying the journey 
+      as much as the destination—an ethos I bring to my leadership style every day.
     </p>
     <p>
-      Whether it’s streamlining core infrastructure, championing automation, or enhancing the 
-      digital experience, I’m passionate about concrete results and a proactive approach 
-      to transforming enterprise operations. At the heart of my leadership style is 
-      transparency, teamwork, and a passion for creative problem-solving.
+      I’m laser-focused on **execution** and **getting things done**—developing 
+      **high-performing teams** who set ambitious goals and consistently deliver 
+      fast, reliable results. Whether modernizing infrastructure or crafting automated tools, 
+      my mission is to propel financial empowerment in the middle market.
     </p>
   </section>
 
@@ -244,90 +245,93 @@
   <section class="section" id="strategy">
     <h2>My Technology Strategy</h2>
     <p>
-      Driving growth in the middle market space at Transamerica takes more than a vision—it takes a 
-      proven framework. Below are six pivotal pillars in my work, helping reduce complexity, improve 
-      speed to market, and ensure 24/7 service reliability.
+      Achieving a future-ready organization calls for a clear, practical framework. 
+      Below are the six pillars I use to reduce complexity, enhance speed to market, 
+      and ensure smooth, 24/7 operations—all while evolving how we serve and educate the middle market.
     </p>
     <div class="tech-strategy">
       <div class="pillar">
         <h3>1. Standardization</h3>
         <p>
-          I champion consistent architectures and streamlined processes to cut through 
-          complexity and lay a solid foundation for hypergrowth.
+          Through consistent architecture and processes, we cut complexity 
+          so teams can deploy faster and focus on what truly matters.
         </p>
       </div>
       <div class="pillar">
         <h3>2. Digitization</h3>
         <p>
-          Expanding digital channels not only boosts our reach and scalability, it ensures 
-          customers and teams stay connected whenever, wherever.
+          Expanding online capabilities ensures seamless customer and internal 
+          interactions, from everyday support to strategic financial guidance.
         </p>
       </div>
       <div class="pillar">
         <h3>3. Automation</h3>
         <p>
-          Automated workflows mean fewer bottlenecks and less room for error, 
-          allowing us to innovate faster and work smarter.
+          Streamlined workflows reduce human error, empower growth, 
+          and free up talent for higher-value work—especially in delivering 
+          tools that educate and inform customers.
         </p>
       </div>
       <div class="pillar">
         <h3>4. Operating Model</h3>
         <p>
-          A balanced blend of in-house talent and strategic partnerships keeps us nimble, 
-          cost-efficient, and always ready for the next challenge.
+          Balancing in-house and external expertise keeps us lean, scalable, 
+          and ready to push forward innovative financial solutions.
         </p>
       </div>
       <div class="pillar">
         <h3>5. Security & Availability</h3>
         <p>
-          Resiliency is engineered into every solution. Our platforms are always on— 
-          so your business never has to hit pause.
+          Our platform remains always-on, reinforcing the trust and reliability 
+          required to move fast in the ever-evolving financial landscape.
         </p>
       </div>
       <div class="pillar">
         <h3>6. Data & Analytics</h3>
         <p>
-          From real-time dashboards to AI-driven insights, data underpins strategic decisions, 
-          unlocking value nobody else sees.
+          Actionable insights guide better decisions for both our teams and 
+          customers—unlocking new ways to empower the middle market.
         </p>
       </div>
     </div>
   </section>
 
-  <!-- HOBBIES SECTION -->
-  <section class="section" id="hobbies">
-    <h2>Life Beyond Tech</h2>
+  <!-- PASSIONS & BEYOND WORK SECTION -->
+  <section class="section" id="passions">
+    <h2>Beyond Work</h2>
     <p>
-      Technology is my profession—nature and adventure keep me energized.
-      Here’s a glimpse of what keeps me inspired outside the office.
+      Whether teaching financial literacy or exploring the outdoors, 
+      I find inspiration in the experiences that shape our lives. 
+      Here's a snapshot of what fuels me outside the office.
     </p>
     <div class="hobbies-grid">
       <div class="hobby">
         <h3>Photography</h3>
         <p>
-          Capturing fleeting moments, whether it’s an epic sunset or a candid family snapshot, 
-          reminds me to look closer and appreciate the world’s small details.
+          Capturing moments—be it landscapes, candid family shots, or 
+          everyday beauty—helps me see the world in a fresh light.
         </p>
       </div>
       <div class="hobby">
         <h3>Nature & Hiking</h3>
         <p>
-          I love wandering trails, exploring national parks, and hitting refresh 
-          when I’m off the grid—just me, fresh air, and the open horizon.
+          My go-to escape: fresh air, winding trails, and a sense of wonder 
+          that reminds me how important it is to keep exploring.
         </p>
       </div>
       <div class="hobby">
         <h3>Family Time</h3>
         <p>
-          My family is my anchor—whether we’re laughing over board games, 
-          cooking up a feast, or simply enjoying each other’s company.
+          From weekend getaways to simple meals at home, 
+          family moments are a constant source of gratitude and motivation.
         </p>
       </div>
       <div class="hobby">
-        <h3>MN Wild Hockey</h3>
+        <h3>Educating on Financial Security</h3>
         <p>
-          As a proud fan of the Minnesota Wild, I’m always game for catching a match, 
-          celebrating every slap shot, and bonding with fellow hockey enthusiasts.
+          I’m dedicated to equipping the middle market with innovative 
+          automation tools and financial insights—helping people realize 
+          they can chart a confident path to the future.
         </p>
       </div>
     </div>
@@ -337,7 +341,7 @@
   <section class="section" id="contact">
     <h2>Contact</h2>
     <div class="contact-content">
-      <p>Got a question, idea, or just want to talk hockey? I’m all ears!</p>
+      <p>Have questions, ideas, or want to collaborate? I’m all ears.</p>
       <a href="mailto:tom@example.com">tom@example.com</a>
       <a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn Profile</a>
     </div>
@@ -346,6 +350,7 @@
   <!-- FOOTER -->
   <footer>
     <p>&copy; <span id="year"></span> Tom Haus. All rights reserved.</p>
+    <p>Inspired by <a href="https://www.thedankoe.com" target="_blank" rel="noopener">The Dan Koe</a></p>
   </footer>
 
   <!-- OPTIONAL JAVASCRIPT -->
