--- a/test.html
+++ b/test.html
@@ -219,8 +219,8 @@
     <h1>Hello, I’m Tom Haus</h1>
     <p>
       Middle Market CTO at Transamerica <br>
-      Bringing financial security to the middle market through innovation, 
-      automation, and a passion for helping others thrive.
+      Delivering financial security solutions through strategic tech roadmaps, 
+      AI-driven automation, and high-performing teams focused on execution.
     </p>
     <a href="#about" class="cta-button">Learn More</a>
   </section>
@@ -229,15 +229,17 @@
   <section class="section" id="about">
     <h2>About Me</h2>
     <p>
-      As the Middle Market CTO at Transamerica, I lead technology assessments and strategic implementations 
-      that guide people toward greater financial security. I believe in enjoying the journey 
-      as much as the destination—an ethos I bring to my leadership style every day.
+      As Middle Market CTO at Transamerica, my priority is shaping 
+      technology strategies that expand financial security options 
+      and accelerate growth. I believe the journey is just as important 
+      as the destination—a principle I weave into my leadership 
+      by guiding high-performing teams to set bold goals and deliver results quickly.
     </p>
     <p>
-      I’m laser-focused on **execution** and **getting things done**—developing 
-      **high-performing teams** who set ambitious goals and consistently deliver 
-      fast, reliable results. Whether modernizing infrastructure or crafting automated tools, 
-      my mission is to propel financial empowerment in the middle market.
+      Whether modernizing core platforms or implementing AI-driven 
+      automation, I drive execution at scale, building confidence in 
+      solutions that power the financial industry. Together, we push boundaries 
+      and measure each step to continuously improve our path forward.
     </p>
   </section>
 
@@ -245,52 +247,57 @@
   <section class="section" id="strategy">
     <h2>My Technology Strategy</h2>
     <p>
-      Achieving a future-ready organization calls for a clear, practical framework. 
-      Below are the six pillars I use to reduce complexity, enhance speed to market, 
-      and ensure smooth, 24/7 operations—all while evolving how we serve and educate the middle market.
+      With a clear roadmap and a focus on measurable impact, 
+      here are the six pillars that define my approach to 
+      delivering transformative technology in the financial industry.
     </p>
     <div class="tech-strategy">
       <div class="pillar">
-        <h3>1. Standardization</h3>
+        <h3>1. Developing Technology Strategies for the Financial Industry</h3>
         <p>
-          Through consistent architecture and processes, we cut complexity 
-          so teams can deploy faster and focus on what truly matters.
+          I create forward-looking, realistic roadmaps tailored 
+          to financial services. By aligning tech investments 
+          with business goals, we ensure growth is both scalable and profitable.
         </p>
       </div>
       <div class="pillar">
         <h3>2. Digitization</h3>
         <p>
-          Expanding online capabilities ensures seamless customer and internal 
-          interactions, from everyday support to strategic financial guidance.
+          Expanding online capabilities ensures seamless 
+          stakeholder engagement, from everyday support 
+          to strategic collaboration in the financial sector.
         </p>
       </div>
       <div class="pillar">
-        <h3>3. Automation</h3>
+        <h3>3. Automation & AI Solutions</h3>
         <p>
-          Streamlined workflows reduce human error, empower growth, 
-          and free up talent for higher-value work—especially in delivering 
-          tools that educate and inform customers.
+          Leveraging advanced AI and streamlined workflows 
+          reduces human error, amplifies productivity, 
+          and unlocks creative energy for high-value initiatives.
         </p>
       </div>
       <div class="pillar">
-        <h3>4. Operating Model</h3>
+        <h3>4. Building High-Performing Leaders & Teams</h3>
         <p>
-          Balancing in-house and external expertise keeps us lean, scalable, 
-          and ready to push forward innovative financial solutions.
+          By cultivating strong leadership and a culture 
+          of execution, we empower teams to deliver fast, 
+          consistent results in a dynamic marketplace.
         </p>
       </div>
       <div class="pillar">
-        <h3>5. Security & Availability</h3>
+        <h3>5. Security</h3>
         <p>
-          Our platform remains always-on, reinforcing the trust and reliability 
-          required to move fast in the ever-evolving financial landscape.
+          Robust security practices are foundational 
+          to trust and reliability. Our platforms 
+          remain safe, compliant, and ready to evolve.
         </p>
       </div>
       <div class="pillar">
-        <h3>6. Data & Analytics</h3>
+        <h3>6. Measure & Metrics-Based Organization</h3>
         <p>
-          Actionable insights guide better decisions for both our teams and 
-          customers—unlocking new ways to empower the middle market.
+          Data-driven decisions and clear KPIs guide 
+          continuous optimization, shaping strategies 
+          that adapt and improve in real-time.
         </p>
       </div>
     </div>
@@ -300,38 +307,38 @@
   <section class="section" id="passions">
     <h2>Beyond Work</h2>
     <p>
-      Whether teaching financial literacy or exploring the outdoors, 
-      I find inspiration in the experiences that shape our lives. 
-      Here's a snapshot of what fuels me outside the office.
+      Whether I’m exploring nature, capturing moments through photography, 
+      or spending quality time with family, I find inspiration that fuels my 
+      drive to innovate and empower others.
     </p>
     <div class="hobbies-grid">
       <div class="hobby">
         <h3>Photography</h3>
         <p>
-          Capturing moments—be it landscapes, candid family shots, or 
-          everyday beauty—helps me see the world in a fresh light.
+          Capturing moments—be they sunsets or spontaneous smiles—reminds 
+          me to appreciate life’s subtle beauty and stay curious.
         </p>
       </div>
       <div class="hobby">
         <h3>Nature & Hiking</h3>
         <p>
-          My go-to escape: fresh air, winding trails, and a sense of wonder 
-          that reminds me how important it is to keep exploring.
+          Breaking away from daily hustle to wander scenic trails 
+          keeps my perspective fresh and grounded.
         </p>
       </div>
       <div class="hobby">
         <h3>Family Time</h3>
         <p>
-          From weekend getaways to simple meals at home, 
-          family moments are a constant source of gratitude and motivation.
+          My family is my anchor—sharing laughter, meals, 
+          and supportive conversations that energize my journey.
         </p>
       </div>
       <div class="hobby">
         <h3>Educating on Financial Security</h3>
         <p>
-          I’m dedicated to equipping the middle market with innovative 
-          automation tools and financial insights—helping people realize 
-          they can chart a confident path to the future.
+          I dedicate time to guiding people on practical 
+          steps toward financial confidence, leveraging 
+          technology and automation for greater impact.
         </p>
       </div>
     </div>
@@ -341,7 +348,7 @@
   <section class="section" id="contact">
     <h2>Contact</h2>
     <div class="contact-content">
-      <p>Have questions, ideas, or want to collaborate? I’m all ears.</p>
+      <p>Questions, ideas, or simply want to connect? I’m here to help.</p>
       <a href="mailto:tom@example.com">tom@example.com</a>
       <a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn Profile</a>
     </div>
@@ -350,7 +357,6 @@
   <!-- FOOTER -->
   <footer>
     <p>&copy; <span id="year"></span> Tom Haus. All rights reserved.</p>
-    <p>Inspired by <a href="https://www.thedankoe.com" target="_blank" rel="noopener">The Dan Koe</a></p>
   </footer>
 
   <!-- OPTIONAL JAVASCRIPT -->
