--- a/test.html
+++ b/test.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tom Haus | Middle Market CTO, Transamerica</title>
-  <meta name="description" content="Official personal website for Tom Haus, Middle Market CTO at Transamerica.">
+  <title>Tom Haus | CTO</title>
+  <meta name="description" content="Official personal website for Tom Haus, CTO at Transamerica.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Favicon (Optional) -->
@@ -81,6 +81,7 @@
       font-size: 1.2rem;
       max-width: 800px;
       margin: 0 auto 2rem;
+      line-height: 1.7;
     }
     .hero .cta-button {
       border: 2px solid #fff;
@@ -214,7 +215,7 @@
       opacity: 0.7;
     }
 
-    /* ABOUT ME SECTION (AT THE END) */
+    /* ABOUT ME SECTION */
     .about-container {
       display: flex;
       flex-direction: column;
@@ -273,11 +274,11 @@
 
   <!-- HERO SECTION -->
   <section class="hero" id="home">
-    <h1>Hello, I’m Tom Haus</h1>
+    <h1>Learn, Build, and Enjoy the Journey</h1>
     <p>
-      Middle Market CTO at Transamerica<br>
-      Bridging technology and financial services to expand opportunities 
-      for the middle market—one breakthrough at a time.
+      I’m Tom Haus, Middle Market CTO at Transamerica.<br>
+      I help people Learn new technology, Build transformative solutions, 
+      and Enjoy the journey to financial security.
     </p>
     <a href="#strategy" class="cta-button">Explore My Approach</a>
   </section>
@@ -286,57 +287,55 @@
   <section class="section" id="strategy">
     <h2>My Technology Strategy</h2>
     <p>
-      With a clear roadmap and a focus on measurable impact, 
-      here are the six pillars that define my approach to 
-      delivering transformative technology in the financial industry.
+      Whether you want to <strong>Learn</strong> about innovative fintech tools, <strong>Build</strong> a more 
+      resilient organization, or <strong>Enjoy</strong> watching your vision come to life, 
+      these six pillars guide my work in the financial industry.
     </p>
     <div class="tech-strategy">
       <div class="pillar">
         <h3>1. Developing Technology Strategies for the Financial Industry</h3>
         <p>
-          I create forward-looking, realistic roadmaps tailored 
-          to financial services. By aligning tech investments 
-          with business goals, we ensure growth is both scalable and profitable.
+          From concept to rollout, I align each step with business goals. 
+          This strategy-first mindset makes learning simpler, building faster, 
+          and results more impactful.
         </p>
       </div>
       <div class="pillar">
         <h3>2. Digitization</h3>
         <p>
-          Expanding online capabilities ensures seamless 
-          stakeholder engagement, from everyday support 
-          to strategic collaboration in the financial sector.
+          Creating immersive digital experiences for customers and teams 
+          sets the foundation for real growth—turning barriers into learning opportunities.
         </p>
       </div>
       <div class="pillar">
         <h3>3. Automation & AI Solutions</h3>
         <p>
-          Leveraging advanced AI and streamlined workflows 
-          reduces human error, amplifies productivity, 
-          and unlocks creative energy for high-value initiatives.
+          When we automate repetitive tasks and harness AI, we free up our energy 
+          to build human-focused innovations. It’s about efficiency that lets us 
+          enjoy a more creative, proactive environment.
         </p>
       </div>
       <div class="pillar">
         <h3>4. Building High-Performing Leaders & Teams</h3>
         <p>
-          By cultivating strong leadership and a culture 
-          of execution, we empower teams to deliver fast, 
-          consistent results in a dynamic marketplace.
+          Strong leadership cultures don’t just happen: they learn continuously, 
+          build winning mindsets, and enjoy a consistent track record of success.
         </p>
       </div>
       <div class="pillar">
         <h3>5. Security</h3>
         <p>
-          Robust security practices are foundational 
-          to trust and reliability. Our platforms 
-          remain safe, compliant, and ready to evolve.
+          Trust is earned by protecting data and processes at every layer. 
+          By prioritizing security, we ensure everyone can learn and adapt 
+          without fearing sudden setbacks.
         </p>
       </div>
       <div class="pillar">
         <h3>6. Measure & Metrics-Based Organization</h3>
         <p>
-          Data-driven decisions and clear KPIs guide 
-          continuous optimization, shaping strategies 
-          that adapt and improve in real-time.
+          Real progress is visible in metrics—data drives decisions, helps us 
+          build accountability, and lets us enjoy the wins by celebrating 
+          tangible results.
         </p>
       </div>
     </div>
@@ -346,18 +345,17 @@
   <section class="section" id="blog">
     <h2>My Blog</h2>
     <p>
-      Get insights into my latest thinking about technology, automation, 
-      and financial security. Below is a peek at my newest article on Ghost.
+      Stay curious and keep learning—my latest posts on Ghost cover everything 
+      from harnessing AI to fueling financial security. Here’s a peek at one recent article.
     </p>
     <div class="blog-container">
       <!-- Example blog post card -->
       <div class="blog-article">
         <h3>“Redefining Financial Security with AI”</h3>
         <p>
-          AI is redefining how we approach financial security, from simplifying underwriting 
-          to creating hyper-personalized experiences. In my latest post, 
-          I explore the profound shifts AI can bring to the middle market—
-          and why a forward-thinking strategy matters more than ever.
+          AI is transforming how we Learn, Build, and Enjoy financial solutions—especially 
+          in the middle market. This article dives into the crucial shifts AI brings to 
+          underwriting, personalized insights, and more.
         </p>
         <a href="https://your-ghost-blog.com/redefining-financial-security-with-ai" target="_blank" rel="noopener">
           Read the Full Article
@@ -370,38 +368,37 @@
   <section class="section" id="passions">
     <h2>Beyond Work</h2>
     <p>
-      Whether I’m exploring nature, capturing moments through photography, 
-      or spending quality time with family, I find inspiration that fuels my 
-      drive to innovate and empower others.
+      Learning, building, and enjoying don’t stop at the office. 
+      Here’s how I recharge and find fresh inspiration.
     </p>
     <div class="hobbies-grid">
       <div class="hobby">
         <h3>Photography</h3>
         <p>
-          Capturing moments—be they sunsets or spontaneous smiles—reminds 
-          me to appreciate life’s subtle beauty and stay curious.
+          Capturing beautiful moments—sunsets, cityscapes, or candid family pictures—lets me learn 
+          to see the world with new eyes and enjoy the vibrant details.
         </p>
       </div>
       <div class="hobby">
         <h3>Nature & Hiking</h3>
         <p>
-          Breaking away from daily hustle to wander scenic trails 
-          keeps my perspective fresh and grounded.
+          A brisk hike helps me build stamina, clear my mind, and appreciate the journey, 
+          step by step—an ideal mirror for my work in tech.
         </p>
       </div>
       <div class="hobby">
         <h3>Family Time</h3>
         <p>
-          My family is my anchor—sharing laughter, meals, 
-          and supportive conversations that energize my journey.
+          Sharing meals, stories, and laughter reminds me to enjoy life’s simplest 
+          moments and build stronger relationships—both at home and in business.
         </p>
       </div>
       <div class="hobby">
         <h3>Educating on Financial Security</h3>
         <p>
-          I dedicate time to guiding people on practical 
-          steps toward financial confidence, leveraging 
-          technology and automation for greater impact.
+          Teaching others how to create a secure financial future is a passion. 
+          I learn as much as I share, watching people take bold steps toward 
+          long-term independence.
         </p>
       </div>
     </div>
@@ -410,39 +407,39 @@
   <!-- CONTACT SECTION -->
   <section class="section" id="contact">
     <h2>Contact</h2>
+    <p>
+      Ready to learn more, build new solutions, or simply enjoy a conversation? 
+      Let’s connect.
+    </p>
     <div class="contact-content">
-      <p>Questions, ideas, or simply want to connect? I’m here to help.</p>
       <a href="mailto:tom@example.com">tom@example.com</a>
       <a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn Profile</a>
     </div>
   </section>
 
-  <!-- ABOUT ME (MOVED TO THE END) -->
+  <!-- ABOUT ME (AT THE END) -->
   <section class="section" id="about-me">
     <h2>About Me</h2>
     <div class="about-container">
       <!-- Replace 'tom-haus.jpg' with your actual image path -->
-      <img src="webResult.jpg" alt="Tom Haus headshot" width=150 height=150>
+      <img src="tom-haus.jpg" alt="Tom Haus headshot">
       <p>
-        I'm Tom Haus, a technology leader with years of experience spearheading 
-        large-scale digital transformations for the financial industry. 
-        Currently serving as the Middle Market CTO at Transamerica, I've also held 
-        pivotal roles guiding multi-million-dollar programs in data analytics, 
-        enterprise architecture, and operational excellence.
+        I’m Tom Haus, a tech leader at Transamerica with a deep background in guiding 
+        large-scale digital transformations for financial services. My ethos: always 
+        <strong>Learn</strong> new possibilities, <strong>Build</strong> solutions with real 
+        impact, and <strong>Enjoy</strong> the journey from vision to execution.
       </p>
       <p>
-        My background combines hands-on technical expertise—like building 
-        automation tools and modernizing legacy systems—with a strategic vision 
-        for what’s next in financial services. This allows me to unify teams 
-        around a shared mission, delivering measurable impact through 
-        high-performing leadership, innovative strategies, and customer-focused 
-        solutions.
+        From automating legacy systems to instilling metrics-based cultures, 
+        I’ve seen first-hand how a passion for learning creates powerful progress. 
+        My work involves bringing together cross-functional teams that act quickly, 
+        think strategically, and adapt continuously.
       </p>
       <p>
-        Inspired by my time at leading organizations, including those featured 
-        on my <a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn</a>, 
-        I see each challenge as an opportunity to shape a more secure, 
-        technologically advanced future for the middle market.
+        Inspired by my experiences at various companies—detailed on my 
+        <a href="https://linkedin.com/in/tomhaus" target="_blank" rel="noopener">LinkedIn</a>—I 
+        believe in building an environment where we measure success 
+        and celebrate it, every step of the way.
       </p>
     </div>
   </section>
